[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/UI_CardPlaceholder.png" type="Texture" id=1]
[ext_resource path="res://Resources/BaseTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/poco10.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/UI/Towers/TowerCard.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/SpritUISheet.png" type="Texture" id=5]

[node name="TowerInfo" type="Panel"]
self_modulate = Color( 0.282353, 0.141176, 0.0156863, 0.686275 )
anchor_right = 0.0875
anchor_bottom = 0.288889
margin_bottom = 1.99999
rect_min_size = Vector2( 56, 106 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 52.0
margin_bottom = 102.0
custom_constants/separation = 1

[node name="AssetFrames" type="HBoxContainer" parent="MarginContainer/VBoxContainer" groups=["TowerInspector"]]
visible = false
margin_left = 8.0
margin_right = 44.0
margin_bottom = 16.0
size_flags_horizontal = 4
alignment = 1

[node name="Frame" type="TextureButton" parent="MarginContainer/VBoxContainer/AssetFrames"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true

[node name="TowerIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/AssetFrames/Frame"]
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="Frame2" type="TextureButton" parent="MarginContainer/VBoxContainer/AssetFrames"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true

[node name="TowerIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/AssetFrames/Frame2"]
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="TowerRange" type="HBoxContainer" parent="MarginContainer/VBoxContainer" groups=["TowerInspector"]]
visible = false
margin_left = 3.0
margin_right = 48.0
margin_bottom = 16.0
size_flags_horizontal = 4
alignment = 1

[node name="Range" type="Label" parent="MarginContainer/VBoxContainer/TowerRange"]
margin_right = 17.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 16 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Rng:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/TowerRange"]
margin_left = 21.0
margin_right = 45.0
margin_bottom = 16.0
rect_min_size = Vector2( 24, 16 )
size_flags_horizontal = 10
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "99"

[node name="TowerROF" type="HBoxContainer" parent="MarginContainer/VBoxContainer" groups=["TowerInspector"]]
visible = false
margin_left = 3.0
margin_top = 34.0
margin_right = 48.0
margin_bottom = 50.0
size_flags_horizontal = 4
alignment = 1

[node name="RoF" type="Label" parent="MarginContainer/VBoxContainer/TowerROF"]
margin_right = 17.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 16 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "RoF:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/TowerROF"]
margin_left = 21.0
margin_right = 45.0
margin_bottom = 16.0
rect_min_size = Vector2( 24, 16 )
size_flags_horizontal = 10
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "99"

[node name="ProjectileDamage" type="HBoxContainer" parent="MarginContainer/VBoxContainer" groups=["TowerInspector"]]
visible = false
margin_left = 3.0
margin_top = 51.0
margin_right = 49.0
margin_bottom = 67.0
size_flags_horizontal = 4
alignment = 1

[node name="Damage" type="Label" parent="MarginContainer/VBoxContainer/ProjectileDamage"]
margin_right = 18.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 16 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Dmg:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/ProjectileDamage"]
margin_left = 22.0
margin_right = 46.0
margin_bottom = 16.0
rect_min_size = Vector2( 24, 16 )
size_flags_horizontal = 10
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "99"

[node name="TowerSell" type="TextureButton" parent="MarginContainer/VBoxContainer" groups=["SellButton", "TowerInspector"]]
visible = false
margin_left = 2.0
margin_right = 50.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )

[node name="Sell" type="Label" parent="MarginContainer/VBoxContainer/TowerSell"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -9.0
margin_right = 9.0
margin_bottom = 32.0
rect_min_size = Vector2( 8, 16 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Value:"
align = 1

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/TowerSell"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -16.0
margin_right = 12.0
rect_min_size = Vector2( 24, 16 )
size_flags_horizontal = 10
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "99"
align = 1
valign = 1
